<resources>
    <string name="fab_content_add">Add element</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="zero">0</string>
    <string name="complete_number">Complete number:</string>
    <string name="period_days">Period (days):</string>
    <string name="save">Save</string>
    <string name="color_text">Color:</string>
    <string name="priority_text">Priority:</string>
    <string name="type_text">Type:</string>
    <string name="action_delete">Delete</string>
    <string name="rectangle">rectangle</string>
    <string name="hue_gradient">Hue gradient</string>
    <string name="current_color_button">Current color button</string>
    <string name="select_color_text">Select color:</string>
    <string name="selected_color_text">Selected color:</string>

    <string-array name="priorities">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Very high</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home_page">Home</string>
    <string name="about_page">About</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="display_form_page">Add/edit habit</string>
    <string name="developer">Developer: Ivan Lazarev</string>
    <string name="version">Version:</string>
    <string name="search_and_filters">Search and filters</string>
    <string name="ascending_sort_button">Ascending sort button</string>
    <string name="descending_sort_button">Descending sort button</string>
    <string name="sorted_by_priority">Sorted by priority</string>
    <string name="clear">Clear</string>
    <string name="avatar_image">Avatar image</string>
    <string name="username">Username</string>
</resources>