<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_controller"
    app:startDestination="@id/homePage">

    <fragment
        android:id="@+id/homePage"
        android:name="com.example.learnkotlin.MainFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_homePage_to_displayFormPage"
            app:destination="@id/displayFormPage" />
        <action
            android:id="@+id/action_homePage_to_aboutPage"
            app:destination="@id/aboutPage" />
    </fragment>

    <fragment
        android:id="@+id/displayFormPage"
        android:name="com.example.learnkotlin.DisplayFormFragment"
        android:label="@string/display_form_page"
        tools:layout="@layout/fragment_display_form">
    </fragment>

    <fragment
        android:id="@+id/aboutPage"
        android:name="com.example.learnkotlin.AboutFragment"
        android:label="@string/about_page"
        tools:layout="@layout/fragment_about">
    </fragment>

</navigation>