<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisplayMessageActivity">
        <!--android:background="@drawable/rezero"-->

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/title"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/dark_red"
            android:textColorHint="@color/dark_red_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="350dp"
            android:layout_height="87dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints="@string/description"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="@color/dark_red"
            android:textColorHint="@color/dark_red_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="182dp"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

        <RadioGroup
            android:id="@+id/typesGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checkedButton="@id/positiveType"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioritySpinner">

            <RadioButton
                android:id="@+id/positiveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positive"
                android:textColor="@color/dark_red"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/negativeType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative"
                android:textColor="@color/dark_red"
                android:textStyle="bold" />
        </RadioGroup>

        <EditText
            android:id="@+id/completeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/zero"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/zero"
            android:inputType="number"
            android:paddingTop="0dp"
            android:textColor="@color/dark_red"
            android:textColorHint="@color/dark_red_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/completeCounterText"
            app:layout_constraintTop_toBottomOf="@id/typesGroup" />

        <EditText
            android:id="@+id/periodNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/zero"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/zero"
            android:inputType="number"
            android:paddingTop="0dp"
            android:textColor="@color/dark_red"
            android:textColorHint="@color/dark_red_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/periodNumberText"
            app:layout_constraintTop_toBottomOf="@id/completeCounter" />

        <TextView
            android:id="@+id/completeCounterText"
            android:layout_width="127dp"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:text="@string/complete_number"
            android:textColor="@color/dark_red"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/completeCounter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typesGroup" />

        <TextView
            android:id="@+id/periodNumberText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:text="@string/period_days"
            android:textColor="@color/dark_red"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/periodNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/completeCounterText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>