<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DisplayFormActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textPersonName"
                    tools:text="@string/title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputTitle"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    tools:text="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/prioritySpinner"
                android:layout_width="182dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputDescription" />

            <RadioGroup
                android:id="@+id/typesGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:checkedButton="@id/positiveType"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prioritySpinner">

                <RadioButton
                    android:id="@+id/positiveType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positive"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/negativeType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negative"
                    android:textStyle="bold" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPeriodNumber"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typesGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/periodNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/period_days"
                    android:inputType="number"
                    android:text="@string/zero" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCompleteCounter"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputPeriodNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/completeCounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/complete_number"
                    android:inputType="number"
                    android:text="@string/zero" />
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:id="@+id/colorScrollView"
                android:layout_width="185dp"
                android:layout_height="47dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectColorText">

                <LinearLayout
                    android:id="@+id/colors_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/img_hsv_hue"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="8dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/rectangle"
                        android:onClick="changeColor"
                        app:srcCompat="@drawable/rectangle" />

                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/colorButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="#FFFF2C00"
                android:contentDescription="@string/current_color_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectedColorText"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/rectangle" />

            <TextView
                android:id="@+id/selectColorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/select_color_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputCompleteCounter" />

            <TextView
                android:id="@+id/selectedColorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/selected_color_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colorScrollView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>